--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="activity" type="com.example.howlmvvm.MainActivity" />
+        <import type="android.view.View" />
+        <variable name="viewModel" type="com.example.howlmvvm.ViewModel" />
     </data>
 
     <LinearLayout
@@ -24,55 +25,55 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(1)}"
+                android:onClick="@{() -> viewModel.clickNumber(1)}"
                 android:text="1" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:text="2"
                 android:layout_width="100dp"
-                android:onClick="@{(view) -> activity.clickNumber(2)}"
+                android:onClick="@{(view) -> viewModel.clickNumber(2)}"
                 android:layout_height="100dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(3)}"
+                android:onClick="@{() -> viewModel.clickNumber(3)}"
                 android:text="3" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(4)}"
+                android:onClick="@{() -> viewModel.clickNumber(4)}"
                 android:text="4" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(5)}"
+                android:onClick="@{() -> viewModel.clickNumber(5)}"
                 android:text="5" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(6)}"
+                android:onClick="@{() -> viewModel.clickNumber(6)}"
                 android:text="6" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(7)}"
+                android:onClick="@{() -> viewModel.clickNumber(7)}"
                 android:text="7" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(8)}"
+                android:onClick="@{() -> viewModel.clickNumber(8)}"
                 android:text="8" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="@{() -> activity.clickNumber(9)}"
+                android:onClick="@{() -> viewModel.clickNumber(9)}"
                 android:text="9" />
 
         </GridLayout>
